--- a/index.html
+++ b/index.html
@@ -6,12 +6,56 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+          integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <title>curzr</title>
 </head>
 <body>
 <div class="container">
     <div class="content">
-        <a class="card"></a>
+        <a class="card">
+            <img src="https://via.placeholder.com/298x188" alt="image-lote" class="image-lote">
+            <div class="title">
+                <i class="fa-solid fa-gavel"></i>
+                <span>Equipamento teste - 001</span>
+            </div>
+            <div class="card-body">
+                <div class="localidade">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <span>Maringá/PR</span>
+                </div>
+                <div class="avaliacao">
+                    <div class="vl_avaliacao">
+                        <i class="fa-solid fa-comments-dollar"></i>
+                        <span>Avaliação:</span>
+                    </div>
+                    <span>R$ 10.124.312</span>
+                </div>
+                <div class="lance-minimo">
+                    <div class="vl_lanceminimo">
+                        <i class="fa-solid fa-hand-holding-dollar"></i>
+                        <span>Lance mínimo:</span>
+                    </div>
+                    <span>R$ 5.062.156</span>
+                </div>
+                <div class="lance-usuario">
+                    <div class="vl_lance">
+                        <i class="fa-solid fa-hand-holding-dollar"></i>
+                        <span>Lance atual:</span>
+                    </div>
+                    <span>R$ 5.062.156</span>
+                </div>
+                <div class="usuario">
+                    <div class="label-usuario">
+                        <i class="fa-solid fa-user"></i>
+                        <span>Usuário:</span>
+                    </div>
+                    <span>@goularte</span>
+                </div>
+            </div>
+            <button>Acessar lote</button>
+        </a>
     </div>
 </div>
 <div class="curzr"></div>
