cursor hover no elemento img

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
                     <span>@goularte</span>
                 </div>
             </div>
-            <button>Acessar lote</button>
+            <button>
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                <span>Acessar lote</span>
+            </button>
         </a>
     </div>
 </div>
