--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="card-body">
                 <div class="localidade">
                     <i class="fa-solid fa-location-dot"></i>
-                    <span>Maringá/PR</span>
+                    <span>Cidade/UF</span>
                 </div>
                 <div class="avaliacao">
                     <div class="vl_avaliacao">
@@ -51,7 +51,7 @@
                         <i class="fa-solid fa-user"></i>
                         <span>Usuário:</span>
                     </div>
-                    <span>@goularte</span>
+                    <span>@default</span>
                 </div>
             </div>
             <button>
